# rocket_simple_app

./: .env  .travis.yml  Cargo.toml  README.md
migrations/2019-11-16-000655_create_users_sessions/: down.sql  up.sql
migrations/2019-11-19-080726_create_users/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
templates/: 404.html.tera  index.html.tera
templates/auth/: login.html.tera  register.html.tera
templates/layouts/: base.html.tera  navbar.html.tera
